# quectel-CM

./: CMakeLists.txt  QMIThread.c  decription  mbim-cm.c
.github/workflows/: quectel.yml
cmake/: linux-aarch64.toolchaine.cmake
